# cg_course_examples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
chapter_1/: CMakeLists.txt
chapter_1/lesson_01/: AbstractWindow.cpp  AbstractWindow.h  Utils.cpp  Utils.h  main.cpp  stdafx.h
chapter_1/lesson_02/: AbstractWindow.cpp  Utils.cpp  Window.cpp  main.cpp  stdafx.h
chapter_1/lesson_03/: AbstractWindow.cpp  DispatchEvent.cpp  Window.cpp  main.cpp  stdafx.h
chapter_1/lesson_04/: AbstractWindow.cpp  Flower.cpp  Utils.h  stdafx.h
chapter_1/lesson_05/: AbstractWindow.cpp  ParticleSystem.cpp  ParticleSystem.h  Utils.cpp  Utils.h  Window.cpp
chapter_1/lesson_06/: AbstractWindow.cpp  AbstractWindow.h  Utils.cpp  Window.cpp  main.cpp
chapter_2/: .gitignore  CMakeLists.txt
chapter_2/lesson_07/: AbstractWindow.cpp  Bodies.cpp  Bodies.h  Window.cpp  Window.h  main.cpp  stdafx.h
chapter_2/lesson_08/: AbstractWindow.cpp  Bodies.cpp  Bodies.h  Lights.cpp  Lights.h  Window.cpp  Window.h  main.cpp
chapter_2/lesson_09/: Bodies.cpp  Bodies.h  Decorators.cpp  Decorators.h  Utils.cpp  Window.cpp  Window.h  main.cpp
chapter_2/lesson_10/: AbstractWindow.cpp  Bodies.cpp  Bodies.h  Decorators.cpp  FunctionSurface.h  Window.cpp  Window.h  main.cpp
chapter_2/lesson_11/: AbstractWindow.cpp  Bodies.cpp  Bodies.h  Camera.cpp  Decorators.cpp  Decorators.h  IdentityCube.cpp  IdentityCube.h  IdentitySphere.cpp  IdentitySphere.h  Lights.h  MeshP3NT2.cpp  RevolutionBodies.cpp  Skybox.cpp  Skybox.h  Texture2D.cpp  Window.cpp  Window.h  main.cpp  stdafx.h
chapter_2/lesson_12/: AbstractWindow.cpp  Decorators.cpp  Decorators.h  HeadUpDisplay.cpp  HeadUpDisplay.h  Lights.cpp  Lights.h  MemoryField.cpp  MemoryField.h  MemoryTile.cpp  MemoryTile.h  MeshP3NT2.h  RevolutionBodies.h  Texture2D.h  Window.cpp  Window.h  main.cpp  stdafx.h
chapter_2/libchapter2/: libchapter2.h
chapter_2/libchapter2/src/: AbstractWindow.cpp  AbstractWindow.h  Camera.cpp  Camera.h  DispatchEvent.cpp  FilesystemUtils.cpp  FilesystemUtils.h  FloatRect.cpp  FloatRect.h  ISceneObject.h  Ray.cpp  Ray.h  Texture2D.cpp  Texture2D.h  Utils.cpp  Utils.h  libchapter2_private.h
chapter_2/res/galaxy/: galaxy.plist
chapter_2/res/memory-trainer/: spites.plist
chapter_3/: CMakeLists.txt
chapter_3/lesson_13/: Bodies.cpp  Bodies.h  WindowClient.cpp  WindowClient.h  main.cpp
chapter_3/lesson_14/: Quad.cpp  Quad.h  WindowClient.cpp  WindowClient.h  main.cpp
chapter_3/lesson_15/: TwistValueController.cpp  TwistValueController.h  WhitneyUmbrella.cpp  WhitneyUmbrella.h  WindowClient.cpp  WindowClient.h  main.cpp
chapter_3/lesson_16/: EarthProgramContext.cpp  EarthProgramContext.h  IdentitySphere.cpp  WindowClient.cpp  WindowClient.h  main.cpp  stdafx.h
chapter_3/lesson_17/: EarthProgramContext.cpp  EarthProgramContext.h  EarthRenderer3D.h  IRenderer3D.h  IdentitySphere.h  MeshP3NT2.h  WindowClient.cpp  WindowClient.h  main.cpp
chapter_3/libchapter3/: libchapter3.h
chapter_3/libchapter3/src/: AbstractWindowClient.cpp  AbstractWindowClient.h  ArrayObject.cpp  ArrayObject.h  BufferObject.cpp  BufferObject.h  Camera.cpp  FilesystemUtils.cpp  FilesystemUtils.h  FloatRect.cpp  Lights.cpp  Lights.h  ProgramInfo.cpp  ProgramUniform.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  Utils.cpp  Utils.h  VertexAttribute.cpp  VertexAttribute.h  Window.cpp  Window.h  libchapter3_private.h
chapter_3/res/: checkers-and-triangle.frag  checkers.frag  checkers.vert  cloud_earth.frag  cloud_earth.vert  cloud_earth_robust.frag  cloud_earth_robust.vert  copytexture.frag  lambert-phong.vert  lambert.frag  phong.frag  twist.vert
chapter_4/: CMakeLists.txt
chapter_4/lesson_19/: BodyRotationSystem.cpp  Components.h  EarthProgramContext.cpp  EarthProgramContext.h  EarthRenderer3D.cpp  EarthRenderer3D.h  EllipticOrbit.cpp  IdentitySphere.cpp  KeplerLawSystem.cpp  KeplerLawSystem.h  MeshP3NT2.cpp  MeshP3NT2.h  ParticleProgram.cpp  ParticleProgram.h  ParticleRenderSystem.cpp  ParticleRenderSystem.h  ParticleUpdateSystem.cpp  ParticleUpdateSystem.h  PlanetProgram.cpp  PlanetRenderer.cpp  RenderSystem.cpp  RenderSystem.h  SceneLoader.cpp  SceneLoader.h  ScriptSystem.cpp  ScriptSystem.h  StaticProgramContext.cpp  StaticProgramContext.h  StaticRenderSystem.cpp  StaticRenderSystem.h  StaticRenderer.cpp  StaticRenderer.h  Tesselator.cpp  Tesselator.h  UpdateSystem.cpp  UpdateSystem.h  WindowClient.cpp  WindowClient.h  main.cpp  stdafx.h
chapter_4/lesson_20/: Components.h  IRenderer3D.h  MeshP3NT2.h  PhongProgram.cpp  PhongProgram.h  PhongRenderer.cpp  PhongRenderer.h  PlanetRenderer.h  RenderSystem.cpp  RenderSystem.h  SceneLoader.cpp  SceneLoader.h  Tesselator.h  WindowClient.cpp  WindowClient.h  main.cpp
chapter_4/lesson_21/: BodyRotationSystem.cpp  BodyRotationSystem.h  Components.h  KeplerLawSystem.h  ParticleProgram.cpp  ParticleRenderSystem.cpp  ParticleRenderSystem.h  ParticleUpdateSystem.cpp  ParticleUpdateSystem.h  PlanetProgram.cpp  PlanetProgram.h  PlanetRenderer.h  RenderSystem.cpp  RenderSystem.h  Scale.h  SceneLoader.cpp  TimeController.cpp  TimeController.h  WindowClient.cpp  WindowClient.h  main.cpp
chapter_4/lesson_22/: AnimationSystem.cpp  AnimationSystem.h  Components.h  PhongProgram.cpp  PhongProgram.h  RenderSystem.cpp  RenderSystem.h  SceneLoader.cpp  SceneLoader.h  SkeletalAnimationProgram.cpp  SkeletalAnimationProgram.h  WindowClient.cpp  WindowClient.h  main.cpp
chapter_4/libs/: libchapter4.h  libgeometry.h  libscene.h  libshading.h  libsystem.h
chapter_4/libs/anax/: Config.hpp
chapter_4/libs/includes/: glm-common.hpp  opengl-common.hpp  sdl-common.hpp
chapter_4/libs/libchapter4/: AbstractWindowClient.cpp  AbstractWindowClient.h  ArrayObject.cpp  AssetLoader.cpp  AssetLoader.h  BoundingBox.cpp  BoundingBox.h  BufferObject.cpp  Camera.cpp  Camera.h  ComplexMesh.cpp  ComplexMesh.h  FilesystemUtils.cpp  FloatRect.cpp  IInputListener.h  IMesh.h  Lights.cpp  MeshType.h  ModelLoader.cpp  ModelLoader.h  ProgramInfo.cpp  Texture2D.h  (+11 more)
chapter_4/res/: phong.frag  phong.vert  static_phong.frag
(+212 files in other folders)
